revise description about options

--- a/dflatj/dflatj.1
+++ b/dflatj/dflatj.1
@@ -22,13 +22,13 @@ The value is number, 'null', 'true', 'false', and string ended by string-suffix.
 The string-suffix can be empty.
 .SH OPTION
 .B \-\^F " delimiter"
-Specify one character of delimiter. The default is ':'.
+Specify one character of delimiter. The default is tab.
 .TP
 .B \-\^i " index-prefix"
 Specify index prefix added beginning of array index. The default is '#'.
 .TP
 .B \-\^s " string-suffix"
-Specify suffix added end of string value. The default is '!'.
+Specify suffix added end of string value. The default is empty.
 .TP
 .SH "SEE ALSO"
 flatj(1), fmj(1)
