--- a/fmj/fmj.1
+++ b/fmj/fmj.1
@@ -9,6 +9,10 @@ fmj \- JSON file pretty printer
 .SH DESCRIPTION
 .B flatj
 This is a JSON file pretty printer.
+.SH OPTION
+.B \-\^m
+Minify the given JSON input.
+.TP
 .SH "SEE ALSO"
 flatj(1), dflatj(1)
 
